# Tsudoku

./: CMakeLists.txt  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
electron/: main.ts  preload.ts
engine/includes/: Grid.h  util.h  util_const.h
engine/includes/solvers/: DLX.h  allSolvers.h  chain.h  coloring.h  fish.h  sdc.h  simpleSolvers.h  singleDigit.h  subsetFinder.h  uniqueness.h  wings.h
engine/src/: Grid.cpp  util.cpp
engine/src/solvers/: DLX.cpp  chain.cpp  coloring.cpp  fish.cpp  sdc.cpp  simpleSolvers.cpp  singleDigit.cpp  subsetFinder.cpp  uniqueness.cpp  wings.cpp
src/: App.vue  electron.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/game_board/: als.rs  blank_cell.rs  coord.rs  mod.rs
src-tauri/src/game_board/dlx_solver/: dlx_node.rs  dlx_solution.rs  mod.rs
src-tauri/src/solvers/: mod.rs  solver_enum.rs  solver_identifier.rs  traits.rs
src-tauri/src/solvers/easy/: claiming.rs  hidden_single.rs  hidden_subset.rs  mod.rs  naked_single.rs  naked_subset.rs  pointing.rs
src-tauri/src/solvers/hard/: mod.rs
src-tauri/src/solvers/hard/sue_de_coq/: mod.rs  orion.rs  scorpius.rs  yoke.rs
src-tauri/src/solvers/medium/: finned.rs  fish.rs  mod.rs  single_digit_patterns.rs  uniqueness.rs
src-tauri/src/solvers/medium/color/: analyzer.rs  colorizer.rs  mod.rs
src-tauri/src/solvers/medium/uniqueness/: avoidable_rectangle_1.rs  avoidable_rectangles_2.rs  bivalue_universal_grave_plus_one.rs  hidden_rectangle.rs  mod.rs  test_1.rs  test_2.rs  test_3.rs  test_4.rs  test_5.rs  test_6.rs
src-tauri/src/solvers/medium/wings/: mod.rs  w_wing.rs  xy_wing.rs  xyz_wing.rs
src-tauri/src/solvers/solution/: candidate.rs  confirmation_details.rs  elimination_details.rs  mod.rs
src-tauri/src/solvers/solver_result/: candidate.rs  confirmation.rs  elimination.rs  house.rs  mod.rs
src-tauri/src/tests/: common.rs
src-tauri/src/utils/: all_equal_value.rs  bit_map.rs  coord.rs  dimension.rs  house.rs  house_type.rs  mod.rs
src/components/edit-options/: difficulty-selection.vue  edit-wrapper.vue  new-game-button.vue  redo.vue  undo.vue
src/components/main-grid/: single-cell-pen.vue  single-cell-pencil.vue  single-cell-wrapper.vue  sudoku-grid.vue
src/components/num-selection/: num-selection-wrapper.vue  num-switch.vue  toggle-filter.vue  toggle-pencil.vue
src/components/toolbox/: auxiliary-wrapper.vue  hint-wrapper.vue  preference-wrapper.vue  selection-wrapper.vue  toolbox-wrapper.vue
src/engine/: DLX.cpp  DLX.h  Grid.cpp  Grid.h  engine.cpp  engine.h  engineAPI.cpp  util.cpp  util.h  util_const.h
src/engine/solvers/: DLX.cpp  DLX.h  LockedCandidates.cpp  fish.cpp  fish.h  fullHouse.cpp  fullHouse.h  hiddenSingle.cpp  hiddenSingle.h  lockedCandidates.h  nakedSingle.cpp  nakedSingle.h  simpleSolvers.cpp  simpleSolvers.h  subsetFinder.cpp  subsetFinder.h  wings.cpp
src/interfaces/: cellInfo.ts  operation.ts
src/lib/: tsudoku-engine.d.ts  tsudoku-engine.node
src/store/: edit.ts  gridData.ts  operationStack.ts
src/util/: editFunctions.ts
tests/: test_Grid.cpp
tests/solvers/: test_DLX.cpp  test_chain.cpp  test_coloring.cpp  test_fish.cpp  test_fullHouse.cpp  test_sdc.cpp  test_singleDigit.cpp  test_solvers.cpp  test_subset.cpp  test_uniqueness.cpp  test_wings.cpp
