[package]
name = "tsudoku"
version = "0.1.0"
description = "A Sudoku Game App Based on Tauri"
authors = ["Yuzheng Ding"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2"  }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_matches = "1.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
